# dicedicebaby

./: .gitignore  .python-version  hello.py  probability-calc.prof  probability.cabal  pyproject.toml  stack.yaml
app/: Main.hs
haskell/: .gitignore  probability.cabal
haskell/app/: Main.hs
haskell/src/Probability/: Dice.hs  Distribution.hs  MemoUgly.hs
haskell/src/Probability/Warhammer/: Attack.hs  Profile.hs
src/: main.py
src/probability/: __init__.py  dice.py  distribution.py
src/probability/warhammer/: __init__.py  attack.py  profile.py  run_tests.py  test_attack.py  unit_profile.py
src/web/: app.py
static/: styles.css
templates/: index.html
