[project]
name = "dicedicebaby"
version = "0.1.0"
description = "A probability calculator for tabletop wargames"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "sortedcontainers>=2.4.0",
    "stackless>=0.0.1",
    "dill>=0.3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.392.post0",
]
