[project]
name = "dicedicebaby"
version = "0.1.0"
description = "A probability calculator for tabletop wargames"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cfractions>=2.4.0",
    "vmprof>=0.4.18.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.392.post0",
]
